--- a/index.html
+++ b/index.html
@@ -220,6 +220,49 @@
 
 
         </section>
+
+        <!-- offer section -->
+        <section
+            class="max-w-[1440px] mx-auto px-4 mb-24 lg:flex lg:flex-row-reverse gap-20 items-center justify-between">
+            <!-- image container -->
+            <div class="mb-12 lg:w-[52%]">
+                <img src="images/shopping.png" alt="">
+            </div>
+            <!-- cards container -->
+            <div class="flex flex-col gap-4">
+                <!-- single card -->
+                <div class="px-6 py-8 rounded-xl shadow-lg flex flex-col gap-4 md:flex-row md:gap-9">
+                    <img class="w-20 mx-auto md:mx-0" src="icons/house.png" alt="">
+                    <!-- text container -->
+                    <div class="text-center md:text-left">
+                        <h1 class="text-2xl font-bold text-[#363958] mb-3">Find the Perfect Fit</h1>
+                        <p class="text-[#3E3E3E]">Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <!-- single card -->
+                <div class="px-6 py-8 rounded-xl shadow-lg flex flex-col gap-4 md:flex-row md:gap-9">
+                    <img class="w-20 mx-auto md:mx-0" src="icons/box.png" alt="">
+                    <!-- text container -->
+                    <div class="text-center md:text-left">
+                        <h1 class="text-2xl font-bold text-[#363958] mb-3">Free Exchanges</h1>
+                        <p class="text-[#3E3E3E]">One of the many reasons you can shop
+                            with peace of mind.</p>
+                    </div>
+                </div>
+                <!-- single card -->
+                <div class="px-6 py-8 rounded-xl shadow-lg flex flex-col gap-4 md:flex-row md:gap-9">
+                    <img class="w-20 mx-auto md:mx-0" src="icons/question.png" alt="">
+                    <!-- text container -->
+                    <div class="text-center md:text-left">
+                        <h1 class="text-2xl font-bold text-[#363958] mb-3">Contact Our Seller</h1>
+                        <p class="text-[#3E3E3E]">They are here to help you. That's quite 
+                            literally what we pay them for.</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer></footer>
 </body>
